# cookbook-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
benchmark/math/: smolagents_math.py
docs/dev-env-setup/: linux_python.md
mcp/demo/: my_server.py
mcp/demo-playwright/: client.py
post-training/trl/: prepare_dataset_sft.py  sft.py  submit_ds_sft_singlenode_multigpus.sh  submit_torchrun_sft.sh
post-training/trl/deepspeed/: ds_zero2_offload.json  ds_zero3_offload.json
snippets/llm/inference/: api_hf.py
snippets/sample-code/: torch_gpu_info.py  try_playwright.py
src/llm/providers/: api_anthropic.py  api_azure_openai.py  api_sglang.py
src/mcp/demo/: client.py  my_server.py
src/mcp/demo-playwright/: client.py
web-server/: main_server.py
