[project]
name = "cookbook-llm"
version = "0.1.0"
description = "Cookbooks and Code Snippets for LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "black>=25.1.0",
    "datasets>=3.4.0",
    "html2text>=2024.2.26",
    "huggingface-hub>=0.29.3",
    "isort>=6.0.1",
    "mcp>=1.4.1",
    "openai>=1.66.3",
    "playwright>=1.50.0",
    "transformers>=4.49.0",
]
